tests/paczka1/small_fuzzy/62234790.err
Error in line 5: yGl S892 28,4
Error in line 6: yGl S436 49,7
